# timber

./: .gitignore  CMakeLists.txt  Makefile  packages.cmake
include/: CMakeLists.txt  logger.h
include/logger/: logger  logger.h
include/nova/: logger.h
include/timber/: CMakeLists.txt  console.hpp  macros.h  timber  timber.h
src/: CMakeLists.txt  logger.cpp
src/console/: CMakeLists.txt  main.cpp
src/liblogger++/: logger.cpp  logger.test.cpp
src/libtimber/: CMakeLists.txt  console.cpp  console_logger.cpp  terminate.cpp  timber.cpp  timer.cpp
